Normal Incidence Bug
- Corrected the Bug Concerning the Normal Incidence Case
- Updated Documentation
- Corrected Errors in MCD example

--- a/examples/Gold Circular Magnetic Dichroism.ipynb
+++ b/examples/Gold Circular Magnetic Dichroism.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d4f2c660aa8477c95de15a213fe2e07068cbbb0ec29dcac1ae9292ba6af70369"
+  "signature": "sha256:3516dd1bbfb2b31986b7aa1d027b7127327b8708362e2da87ed3fbdef76afafa"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -145,7 +145,7 @@
       "v_wl=np.linspace(wl_min,wl_max,wl_step);\n",
       "\n",
       "# polar and azimuthal angles in radians\n",
-      "theta_0=1e-10*(np.pi/1.8e2) \n",
+      "theta_0=0.0\n",
       "phi_0=0.0\n",
       "\n",
       "# drude metal parameters\n",
@@ -218,7 +218,8 @@
       "# polarization correction factors for gold nanoclusters\n",
       "a_x=D/2;a_y=D/2;a_z=D/2;\n",
       "m_L=pm.moe.m_L(a_x,a_y,a_z);\n",
-      "m_D=pm.moe.m_D(a_x,a_y,a_z);"
+      "m_D=pm.moe.m_D(a_x,a_y,a_z);\n",
+      "V=pm.moe.f_V(a_x,a_y,a_z)"
      ],
      "language": "python",
      "metadata": {},
